--- a/index.html
+++ b/index.html
@@ -2,15 +2,58 @@
 <html>
     <head>
         <script>
+            emailmatch = false;
+            passmatch = false;
+
             function emaildetect(){
                 emailt = document.getElementById("emailadress");
                 emailct = document.getElementById("emailadressc");
                 if(emailt.value == emailct.value){
                     document.getElementById("eactext").style.color = "green";
+                    emailmatch = true;
                 }
                 else{
                     document.getElementById("eactext").style.color = "red";
+                    emailmatch = false;
                 }
+            }
+
+            function passworddetect(){
+                passt = document.getElementById("password");
+                passct = document.getElementById("passwordconf");
+                if(passt.value == passct.value){
+                    document.getElementById("pctext").style.color = "green";
+                    passmatch = true;
+                }
+                else{
+                    document.getElementById("pctext").style.color = "red";
+                    passmatch = false;
+                }
+
+            }
+
+            function SignUp(){
+                //username check
+                usernamet = document.getElementById("username")
+                emailadresst = document.getElementById("emailadress")
+                if(usernamet.value != ""){ //temp
+                    emailver = document.getElementById("emailadress")
+                    if(emailmatch == true && emailver.value.includes("@") == true && emailver.value.includes(".") == true){
+                        if(passmatch == true){
+                            window.alert("Done")
+                        }
+                        else{
+                            window.alert("Passwords do not match")
+                        }
+                    }
+                    else{
+                        window.alert("Input a correct email")
+                    }
+                }
+                else{
+                    window.alert("Input a username")
+                }
+
             }
         </script>
     </head>
@@ -24,12 +67,13 @@
             <input type="email" id="emailadressc" oninput="emaildetect()">
             <p style="color:crimson;" id="eactext">●</p>
             <p>password</p>
-            <input type="password" id="password">
+            <input type="password" id="password" oninput="passworddetect()">
             <p>confirm password</p>
-            <input type="password" id="passwordconf">
+            <input type="password" id="passwordconf" oninput="passworddetect()">
+            <p style="color: crimson;" id="pctext">●</p>
             <br>
             <br>
-            <button>Sign up</button>
+            <button onclick="SignUp()">Sign up</button>
         </form>
     </body>
 </html>
