--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <script>
             emailmatch = false;
             passmatch = false;
@@ -65,7 +66,7 @@
             <input type="email" id="emailadress" oninput="emaildetect()">
             <p>confirm email adress</p>
             <input type="email" id="emailadressc" oninput="emaildetect()">
-            <p style="color:crimson;" id="eactext">●</p>
+            <p style="color: crimson;" id="eactext">●</p>
             <p>password</p>
             <input type="password" id="password" oninput="passworddetect()">
             <p>confirm password</p>
